18 June 2010: Wouter
	- iana portlist updated.

17 June 2010: Wouter
	- Add AAAA to root hints for I.ROOT-SERVERS.NET.

16 June 2010: Wouter
	- Fix assertion failure reported by Kai Storbeck from XS4ALL, the
	  assertion was wrong.
	- updated ldns tarball.

15 June 2010: Wouter
	- tag 1.4.5 created.
	- trunk contains 1.4.6 in development.
	- Fix TCPreply on systems with no writev, if just 1 byte could be sent.
	- Fix to use one pointer less for iterator query state store_parent_NS.
	- makedist crosscompile to windows uses builtin ldns not host ldns.
	- Max referral count from 30 to 130, because 128 one character domains
	  is valid DNS.
	- added documentation for the histogram printout to syslog.

11 June 2010: Wouter
	- When retry to parent the retrycount is not wiped, so failed 
	  nameservers are not tried again.
	- iana portlist updated.

10 June 2010: Wouter
	- Fix bug where a long loop could be entered, now cycle detection
	  has a loop-counter and maximum search amount.

4 June 2010: Wouter
	- iana portlist updated.
	- 1.4.5rc1 tag created.

3 June 2010: Wouter
	- ldns tarball updated, 1.6.5.
	- review comments, split dependency cycle tracking for parentside
	  last resort lookups for A and AAAA so there are more lookup options.

2 June 2010: Wouter
	- Fix compile warning if compiled without threads.
	- updated ldns-tarball with current ldns svn (pre 1.6.5).
	- GOST disabled-by-default, the algorithm number is allocated but the
	  RFC is still has to pass AUTH48 at the IETF.

1 June 2010: Wouter
	- Ignore Z flag in incoming messages too.
	- Fix storage of negative parent glue if that last resort fails.
	- libtoolize 2.2.6b, autoconf 2.65 applied to configure.
	- new splint flags for newer splint install.

31 May 2010: Wouter
	- Fix AD flag handling, it could in some cases mistakenly copy the AD 
	  flag from upstream servers.
	- alloc_special_obtain out of memory is not a fatal error any more,