@@ -199,7 +199,15 @@ comm_base_create(int sigs)
 	comm_base_now(b);
 	/* avoid event_get_method call which causes crashes even when
 	 * not printing, because its result is passed */
-	verbose(VERB_ALGO, "libevent %s uses %s method.", 
+	verbose(VERB_ALGO, 
+#ifdef HAVE_EV_LOOP
+		"libev"
+#elif defined(USE_MINI_EVENT)
+		"event "
+#else
+		"libevent "
+#endif
+		"%s uses %s method.", 
 		event_get_version(), 
 #ifdef HAVE_EVENT_BASE_GET_METHOD
 		event_base_get_method(b->eb->base)
